# LLM_faq_chatbot_tutorial

./: README.md
example/: PRJ01_W1_001_Python_Clean_Code.ipynb  PRJ01_W1_001_Python_Clean_Code.md  calculator.py  pyproject.toml
faq_chatbot/: PJR03_W3_005_250913_배동민.ipynb  PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_004_LangSmith_LCEL.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_002_Simple_RAG_Pipeline.ipynb  PRJ01_W2_003_Document_Loader.ipynb  PRJ01_W2_004_Text_Splitter.ipynb  PRJ01_W2_005_Embedding_Model.ipynb  PRJ01_W2_006_Vectorstore.ipynb  PRJ01_W2_007_Retriever (1).ipynb  PRJ01_W2_007_Retriever.ipynb  PRJ01_W3_001_Prompt_Engineering_Basic.ipynb  PRJ01_W3_002_Prompt_Engineering_Fewshot.ipynb  PRJ01_W3_003_Prompt_Engineering_CoT.ipynb  PRJ01_W3_004_Chat_History.ipynb  PRJ01_W3_005_Housing_FAQ_Chatbot.ipynb  chat_history.db  main.py  pyproject.toml
faq_chatbot/chroma_db/: chroma.sqlite3
faq_chatbot/data/: housing_faq_formatted.json
